# my_ros2_project

./: .gitignore
my_ros2_project/: README.md
my_ros2_project/screen_recordings/: simplescreenrecorder Q1-2024-08-20_11.52.12.mkv
ros2_ws2/src/turtlebot_sinusoidal/: CMakeLists.txt  package.xml
ros2_ws2/src/turtlebot_sinusoidal/src/: turtlebot_movement.cpp
ros2_ws3/install/: local_setup.sh  setup.bash  setup.sh
ros2_ws3/install/gazebo_ros2_control/share/ament_index/resource_index/package_run_dependencies/: gazebo_ros2_control
ros2_ws3/install/gazebo_ros2_control/share/ament_index/resource_index/parent_prefix_path/: gazebo_ros2_control
ros2_ws3/install/gazebo_ros2_control/share/gazebo_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
ros2_ws3/install/gazebo_ros2_control/share/gazebo_ros2_control/cmake/: gazebo_ros2_controlConfig-version.cmake  gazebo_ros2_controlConfig.cmake
ros2_ws3/install/gazebo_ros2_control/share/gazebo_ros2_control/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws3/install/six_dof_arm/lib/six_dof_arm/: arm_movement
ros2_ws3/install/six_dof_arm/share/ament_index/resource_index/package_run_dependencies/: six_dof_arm
ros2_ws3/install/six_dof_arm/share/ament_index/resource_index/parent_prefix_path/: six_dof_arm
ros2_ws3/install/six_dof_arm/share/six_dof_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  model.config  package.sh
ros2_ws3/install/six_dof_arm/share/six_dof_arm/cmake/: six_dof_armConfig-version.cmake  six_dof_armConfig.cmake
ros2_ws3/install/six_dof_arm/share/six_dof_arm/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws3/install/six_dof_arm/share/six_dof_arm/launch/: display.launch.py  empty_world.launch.py  moveit.launch.py  robot_state_publisher_launch.py
ros2_ws3/install/six_dof_arm/share/six_dof_arm/launch/install/: local_setup.bash  local_setup.zsh  setup.bash  setup.ps1
ros2_ws3/log/: latest_build
ros2_ws3/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws3/src/install/gazebo_ros2_control/share/ament_index/resource_index/package_run_dependencies/: gazebo_ros2_control
ros2_ws3/src/install/gazebo_ros2_control/share/ament_index/resource_index/parent_prefix_path/: gazebo_ros2_control
ros2_ws3/src/install/gazebo_ros2_control/share/gazebo_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws3/src/install/gazebo_ros2_control/share/gazebo_ros2_control/cmake/: gazebo_ros2_controlConfig-version.cmake  gazebo_ros2_controlConfig.cmake
ros2_ws3/src/install/gazebo_ros2_control/share/gazebo_ros2_control/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws3/src/install/six_dof_arm/lib/six_dof_arm/: arm_movement
ros2_ws3/src/install/six_dof_arm/share/ament_index/resource_index/package_run_dependencies/: six_dof_arm
ros2_ws3/src/install/six_dof_arm/share/ament_index/resource_index/parent_prefix_path/: six_dof_arm
ros2_ws3/src/install/six_dof_arm/share/six_dof_arm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws3/src/install/six_dof_arm/share/six_dof_arm/cmake/: six_dof_armConfig-version.cmake  six_dof_armConfig.cmake
ros2_ws3/src/install/six_dof_arm/share/six_dof_arm/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws3/src/install/six_dof_arm/share/six_dof_arm/launch/: gazebo.launch.py
ros2_ws3/src/install/six_dof_arm/share/six_dof_arm/launch/install/: .colcon_install_layout  COLCON_IGNORE  _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.ps1  local_setup.sh  setup.sh  setup.zsh
ros2_ws3/src/install/six_dof_arm/share/six_dof_arm/launch/log/: COLCON_IGNORE  latest_build
ros2_ws3/src/log/: latest_build
ros2_ws3/src/six_dof_arm/: CMakeLists.txt  package.xml
ros2_ws3/src/six_dof_arm/launch/: display.launch.py  empty_world.launch.py  gazebo.launch.py  moveit.launch.py  robot_state_publisher_launch.py
ros2_ws3/src/six_dof_arm/launch/install/: local_setup.sh  setup.sh
ros2_ws3/src/six_dof_arm/launch/log/: latest_build
ros2_ws3/src/six_dof_arm/src/: arm_movement.cpp
ros2_ws3/src/six_dof_arm/urdf/: model.config  simple_robot.sdf  simple_robot.urdf  six_dof_arm.urdf
screen_recordings/: simplescreenrecorder Q2-2024-08-20_12.32.53.mkv
src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/install/turtlebot_keyboard/lib/turtlebot_keyboard/: keyboard_control
src/install/turtlebot_keyboard/share/turtlebot_keyboard/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/turtlebot_keyboard/share/turtlebot_keyboard/cmake/: turtlebot_keyboardConfig.cmake
src/log/: latest_build
src/turtlebot_keyboard/: CMakeLists.txt
src/turtlebot_keyboard/src/: keyboard_control.cpp
