<?xml version="1.0"?>
<package format="3">
  <name>six_dof_arm</name>
  <version>0.0.0</version>
  <description>ROS2 package for controlling a 6-DOF robotic arm</description>
  <maintainer email="venu@todo.todo">venu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
